# s-rgb

./: Anchor.toml  publish.sh  sync-deployer.sh  tsconfig.json
deployment/: cloudfront.tf  route53.tf  s3.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
elm/src/: Main.elm
elm/src/Model/: Amount.elm  Cell.elm  Color.elm  Grid.elm  Model.elm  Pixel.elm  Primary.elm
elm/src/Model/User/: State.elm  User.elm
elm/src/Msg/: Msg.elm
elm/src/Msg/User/: Msg.elm
elm/src/Sub/Sender/: Sender.elm
elm/src/View/: Footer.elm  Header.elm  Hero.elm
elm/src/View/Admin/: View.elm
programs/s-rgb/: Cargo.toml
programs/s-rgb-craft/: Cargo.toml
programs/s-rgb-craft/src/: lib.rs
programs/s-rgb-craft/src/ix/: mod.rs
programs/s-rgb-craft/src/ix/craft/: add_metadata.rs  edit_metadata.rs  init.rs  mint.rs  mod.rs
programs/s-rgb-craft/src/ix/craft/math/: add.rs  separate.rs
programs/s-rgb-craft/src/pda/: mod.rs
programs/s-rgb-craft/src/pda/craft/: palette.rs  pixel_index_lookup.rs
programs/s-rgb-paint/: Cargo.toml
programs/s-rgb-paint/src/: lib.rs
programs/s-rgb-stake/: Cargo.toml
programs/s-rgb-stake/src/: lib.rs
programs/s-rgb/src/: error.rs  lib.rs
scripts/: .gitignore  package-lock.json  package.json  sync-idl.sh  tsconfig.json
scripts/src/: index.ts  pixels.ts
scripts/src/idl/: craft.ts
scripts/src/pda/: pixel.ts
scripts/src/shdw/: index.ts  metadata.ts
web/: index.html
web/js/: main.js  package-lock.json  package.json  sync-idl.sh
web/js/anchor/: config.ts  wallet.ts
web/js/shdw/: index.ts
web/sass/: custom.scss
(+150 files in other folders)
