[package]
name = "s-rgb-craft"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "s_rgb_craft"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.25.0", features = ["init-if-needed"] }
anchor-spl = "0.25.0"
mpl-token-metadata = { version = "1.6.2", features = ["no-entrypoint"] }
s-rgb-stake = { path = "../s-rgb-stake", features = ["no-entrypoint"] }
